--- a/Monkeypox Classifier.ipynb
+++ b/Monkeypox Classifier.ipynb
@@ -955,8 +955,8 @@
    },
    "outputs": [],
    "source": [
-    "x_val=np.load(\"/content/gdrive/My Drive/Colab Notebooks/feats_val.npy\")\n",
-    "y_val=np.load(\"/content/gdrive/My Drive/Colab Notebooks/labels_val.npy\")\n",
+    "x_val=np.load(\"/content/gdrive/My Drive/Colab Notebooks/m_feats_val.npy\")\n",
+    "y_val=np.load(\"/content/gdrive/My Drive/Colab Notebooks/m_labels_val.npy\")\n",
     "\n",
     "s=np.arange(x_val.shape[0])\n",
     "np.random.shuffle(s)\n",
