--- a/Chickenpox Classifier.ipynb
+++ b/Chickenpox Classifier.ipynb
@@ -131,8 +131,8 @@
     "labels=np.array(labels)\n",
     "\n",
     "# saving features and labels for later re-use\n",
-    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/feats_train\",feats)\n",
-    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/labels_train\",labels)"
+    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/c_feats_train\",feats)\n",
+    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/c_labels_train\",labels)"
    ],
    "metadata": {
     "collapsed": false
