--- a/Monkeypox Classifier.ipynb
+++ b/Monkeypox Classifier.ipynb
@@ -237,8 +237,8 @@
     }
    ],
    "source": [
-    "feats=np.load(\"/content/gdrive/My Drive/Colab Notebooks/feats_train.npy\")\n",
-    "labels=np.load(\"/content/gdrive/My Drive/Colab Notebooks/labels_train.npy\")\n",
+    "feats=np.load(\"/content/gdrive/My Drive/Colab Notebooks/m_feats_train.npy\")\n",
+    "labels=np.load(\"/content/gdrive/My Drive/Colab Notebooks/m_labels_train.npy\")\n",
     "\n",
     "s=np.arange(feats.shape[0])\n",
     "np.random.shuffle(s)\n",
