--- a/Monkeypox Classifier.ipynb
+++ b/Monkeypox Classifier.ipynb
@@ -214,8 +214,8 @@
     "labels=np.array(labels)\n",
     "\n",
     "# saving features and labels for later re-use\n",
-    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/feats_train\",feats)\n",
-    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/labels_train\",labels)"
+    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/m_feats_train\",feats)\n",
+    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/m_labels_train\",labels)"
    ]
   },
   {
