--- a/Chickenpox Classifier.ipynb
+++ b/Chickenpox Classifier.ipynb
@@ -63,7 +63,7 @@
     "    im = cv2.imread(C_DIR +sample_chickenpox[i])\n",
     "    ax[i//3,i%3].imshow(im)\n",
     "    ax[i//3,i%3].axis('off')\n",
-    "f.suptitle('Monkeypox sample images',fontsize=20)\n",
+    "f.suptitle('Chickenpox sample images',fontsize=20)\n",
     "plt.show()"
    ],
    "metadata": {
