--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -7,7 +7,68 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import os\n",
+    "from random import shuffle\n",
+    "import random\n",
+    "#for preprocessing\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D,MaxPooling2D,Dense,Flatten,Dropout\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau\n",
+    "from random import shuffle\n",
+    "#For augmentation\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "#Transfer learning models\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import MobileNetV2\n",
+    "from tensorflow.keras import Model, layers\n",
+    "from numpy import loadtxt\n",
+    "import itertools\n",
+    "from sklearn.metrics import confusion_matrix,classification_report\n",
+    "from tensorflow.keras.applications.imagenet_utils import preprocess_input, decode_predictions\n",
+    "from tensorflow.keras.models import load_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# setting path of directory\n",
+    "C_DIR =  \"/content/gdrive/My Drive/Colab Notebooks/Chickenpox/\"\n",
+    "O_DIR = \"/content/gdrive/My Drive/Colab Notebooks/Others/\"\n",
+    "# storing all the files from directories C_DIR and O_DIR to Cimages and Oimages for accessing images directly\n",
+    "Cimages = os.listdir(C_DIR)\n",
+    "Oimages = os.listdir(O_DIR)\n",
+    "sample_chickenpox = random.sample(Cimages,6)\n",
+    "f,ax = plt.subplots(2,3,figsize=(15,9))\n",
+    "for i in range(0,6):\n",
+    "    im = cv2.imread(C_DIR +sample_chickenpox[i])\n",
+    "    ax[i//3,i%3].imshow(im)\n",
+    "    ax[i//3,i%3].axis('off')\n",
+    "f.suptitle('Chickenpox sample images',fontsize=20)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
