--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -52,18 +52,18 @@
    "outputs": [],
    "source": [
     "# setting path of directory\n",
-    "C_DIR =  \"/content/gdrive/My Drive/Colab Notebooks/Chickenpox/\"\n",
+    "M_DIR =  \"/content/gdrive/My Drive/Colab Notebooks/Measles/\"\n",
     "O_DIR = \"/content/gdrive/My Drive/Colab Notebooks/Others/\"\n",
-    "# storing all the files from directories C_DIR and O_DIR to Cimages and Oimages for accessing images directly\n",
-    "Cimages = os.listdir(C_DIR)\n",
+    "# storing all the files from directories M_DIR and O_DIR to Mimages and Oimages for accessing images directly\n",
+    "Mimages = os.listdir(M_DIR)\n",
     "Oimages = os.listdir(O_DIR)\n",
-    "sample_chickenpox = random.sample(Cimages,6)\n",
+    "sample_monkeypox = random.sample(Mimages,6)\n",
     "f,ax = plt.subplots(2,3,figsize=(15,9))\n",
     "for i in range(0,6):\n",
-    "    im = cv2.imread(C_DIR +sample_chickenpox[i])\n",
+    "    im = cv2.imread(M_DIR +sample_monkeypox[i])\n",
     "    ax[i//3,i%3].imshow(im)\n",
     "    ax[i//3,i%3].axis('off')\n",
-    "f.suptitle('Chickenpox sample images',fontsize=20)\n",
+    "f.suptitle('Monkeypox sample images',fontsize=20)\n",
     "plt.show()"
    ],
    "metadata": {
