--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -63,7 +63,7 @@
     "    im = cv2.imread(M_DIR +sample_monkeypox[i])\n",
     "    ax[i//3,i%3].imshow(im)\n",
     "    ax[i//3,i%3].axis('off')\n",
-    "f.suptitle('Monkeypox sample images',fontsize=20)\n",
+    "f.suptitle('Measles sample images',fontsize=20)\n",
     "plt.show()"
    ],
    "metadata": {
