--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -69,6 +69,74 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sample_others = random.sample(Oimages,6)\n",
+    "f,ax = plt.subplots(2,3,figsize=(15,9))\n",
+    "for i in range(0,6):\n",
+    "    im = cv2.imread(O_DIR +sample_others[i])\n",
+    "    ax[i//3,i%3].imshow(im)\n",
+    "    ax[i//3,i%3].axis('off')\n",
+    "f.suptitle('Others sample images',fontsize=20)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import PIL\n",
+    "\n",
+    "data=[]\n",
+    "labels=[]\n",
+    "for m in Mimages:\n",
+    "    try:\n",
+    "        image=cv2.imread(M_DIR+m)\n",
+    "        image_from_array = PIL.Image.fromarray(image, 'RGB')\n",
+    "        size_image = image_from_array.resize((224, 224))\n",
+    "        data.append(np.array(size_image))\n",
+    "        labels.append(1)\n",
+    "    except AttributeError:\n",
+    "        print(\"\")\n",
+    "\n",
+    "for o in Oimages:\n",
+    "    try:\n",
+    "        image=cv2.imread(O_DIR+o)\n",
+    "        image_from_array = PIL.Image.fromarray(image, 'RGB')\n",
+    "        size_image = image_from_array.resize((224, 224))\n",
+    "        data.append(np.array(size_image))\n",
+    "        labels.append(0)\n",
+    "    except AttributeError:\n",
+    "        print(\"\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#converting features and labels in array\n",
+    "feats=np.array(data)\n",
+    "labels=np.array(labels)\n",
+    "\n",
+    "# saving features and labels for later re-use\n",
+    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/me_feats_train\",feats)\n",
+    "np.save(\"/content/gdrive/My Drive/Colab Notebooks/me_labels_train\",labels)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
