--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -137,6 +137,27 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "feats=np.load(\"/content/gdrive/My Drive/Colab Notebooks/me_feats_train.npy\")\n",
+    "labels=np.load(\"/content/gdrive/My Drive/Colab Notebooks/me_labels_train.npy\")\n",
+    "\n",
+    "s=np.arange(feats.shape[0])\n",
+    "np.random.shuffle(s)\n",
+    "feats=feats[s]\n",
+    "labels=labels[s]\n",
+    "\n",
+    "num_classes=len(np.unique(labels))\n",
+    "len_data=len(feats)\n",
+    "print(len_data)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
