--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -158,6 +158,20 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# splitting cells images into 80:20 ratio i.e., 80% for training and 20% for testing purpose\n",
+    "(x_train,x_test)=feats[(int)(0.2*len_data):],feats[:(int)(0.2*len_data)]\n",
+    "\n",
+    "(y_train,y_test)=labels[(int)(0.2*len_data):],labels[:(int)(0.2*len_data)]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
