--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -172,6 +172,25 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "x_train = x_train.astype('float32')/255 # As we are working on image data we are normalizing data by divinding 255.\n",
+    "x_test = x_test.astype('float32')/255\n",
+    "train_len=len(x_train)\n",
+    "test_len=len(x_test)\n",
+    "\n",
+    "\n",
+    "#Doing One hot encoding as classifier has multiple classes\n",
+    "y_train=to_categorical(y_train,num_classes)\n",
+    "y_test=to_categorical(y_test,num_classes)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
