--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -191,6 +191,26 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Hyper parameters\n",
+    "epochs = 50\n",
+    "batch_size = 32\n",
+    "\n",
+    "conv_base = MobileNetV2(\n",
+    "    include_top=False,\n",
+    "    weights='imagenet')\n",
+    "\n",
+    "for layer in conv_base.layers:\n",
+    "    layer.trainable = True"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
