--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -211,6 +211,23 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "x = conv_base.output\n",
+    "x = layers.GlobalAveragePooling2D()(x)\n",
+    "x = layers.Dense(128, activation='relu')(x)\n",
+    "x = layers.Dropout(0.2)(x)\n",
+    "x = layers.Dense(64, activation='relu')(x)\n",
+    "predictions = layers.Dense(2, activation='softmax')(x)\n",
+    "model = Model(conv_base.input, predictions)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
