--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -244,6 +244,25 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "checkpoint = ModelCheckpoint('.mdl_wts.hdf5', monitor='val_accuracy', verbose=1,\n",
+    "                             save_best_only=True, mode='max')\n",
+    "\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=2,\n",
+    "                                   verbose=1, mode='min', min_lr=0.0000001)\n",
+    "\n",
+    "\n",
+    "\n",
+    "callbacks = [checkpoint,reduce_lr]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
