--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -274,6 +274,42 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "epochs_range = range(1, len(history.epoch) + 1)\n",
+    "\n",
+    "plt.figure(figsize=(15,5))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(epochs_range, acc, label='Train Set')\n",
+    "plt.plot(epochs_range, val_acc, label='Val Set')\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.title('MobileNet V2 Model Accuracy')\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(epochs_range, loss, label='Train Set')\n",
+    "plt.plot(epochs_range, val_loss, label='Val Set')\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title(' MobileNet V2 Model Loss')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
