--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -310,6 +310,44 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# saving the weight of model\n",
+    "from numpy import loadtxt\n",
+    "from keras.models import load_model\n",
+    "model = load_model('.mdl_wts.hdf5')\n",
+    "\n",
+    "#checking the score of the model\n",
+    "score=model.evaluate(x_test,y_test)\n",
+    "print(score)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "x_val=np.load(\"/content/gdrive/My Drive/Colab Notebooks/me_feats_val.npy\")\n",
+    "y_val=np.load(\"/content/gdrive/My Drive/Colab Notebooks/me_labels_val.npy\")\n",
+    "\n",
+    "s=np.arange(x_val.shape[0])\n",
+    "np.random.shuffle(s)\n",
+    "x_val=x_val[s]\n",
+    "y_val=y_val[s]\n",
+    "\n",
+    "x_val = x_val.astype('float32')/255\n",
+    "y_val=to_categorical(y_val,num_classes)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
