--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -348,6 +348,52 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# checking the accuracy of thr\n",
+    "accuracy = model.evaluate(x_val, y_val, verbose=1)\n",
+    "print('\\n', 'Validation_Accuracy:-', accuracy[1])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "pred = model.predict(x_val)\n",
+    "pred = np.argmax(pred,axis = 1)\n",
+    "y_true = np.argmax(y_val,axis = 1)\n",
+    "\n",
+    "#creating confusion matrix\n",
+    "CM = confusion_matrix(y_true, pred)\n",
+    "from mlxtend.plotting import plot_confusion_matrix\n",
+    "# plotting confusion matrix\n",
+    "fig, ax = plot_confusion_matrix(conf_mat=CM ,  figsize=(5, 5))\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('{}'.format(\n",
+    "                           classification_report(y_true , pred)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
