--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -394,6 +394,30 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "y_hat = model.predict(x_val)\n",
+    "\n",
+    "# define text labels\n",
+    "m_labels = ['MonkeyPox','Others']\n",
+    "\n",
+    "# plot a random sample of test images, their predicted labels, and ground truth\n",
+    "fig = plt.figure(figsize=(20, 8))\n",
+    "for i, idx in enumerate(np.random.choice(x_val.shape[0], size=12, replace=False)):\n",
+    "    ax = fig.add_subplot(4,4, i+1, xticks=[], yticks=[])\n",
+    "    ax.imshow(np.squeeze(x_val[idx]))\n",
+    "    pred_idx = np.argmax(y_hat[idx])\n",
+    "    true_idx = np.argmax(y_val[idx])\n",
+    "    ax.set_title(\"{} ({})\".format(m_labels[pred_idx], m_labels[true_idx]),\n",
+    "                 color=(\"blue\" if pred_idx == true_idx else \"red\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
