--- a/Measles Classifier.ipynb
+++ b/Measles Classifier.ipynb
@@ -403,7 +403,7 @@
     "y_hat = model.predict(x_val)\n",
     "\n",
     "# define text labels\n",
-    "m_labels = ['MonkeyPox','Others']\n",
+    "m_labels = ['Measles','Others']\n",
     "\n",
     "# plot a random sample of test images, their predicted labels, and ground truth\n",
     "fig = plt.figure(figsize=(20, 8))\n",
